# techPosts

./: .env  .gitignore  404.html  LICENSE  Makefile  README.md  api-documentation.html  docker-compose.yml  explanation.html  how-to-guides.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html  tutorials.html
.github/workflows/: build.yml  build_and_push.yml  lint.yml  orchestrator.yml  pages.yml  release.yml  test.yml
docker/api/: Dockerfile  Dockerfile-prod  start-dev.sh  start-prod.sh
docker/mongo/: Dockerfile
docs/: index.md  page-1.md  reference.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  theme.jsx
frontend/src/features/auth/services/: authSlice.jsx
frontend/src/features/darkmode/services/: darkModeSlice.jsx
frontend/src/features/post/services/: postSlice.jsx
frontend/src/router/: index.jsx
frontend/src/store/: index.jsx
logs/: logging_config_dev.json  uvicorn.yaml
scripts/: create_openapi_json.py
search/: search_index.json
src/app/: main.py
src/techposts/: run.py
src/techposts/app/: main.py
src/techposts/core/: config.py
src/techposts/core/database/: base.py  session.py
src/techposts/core/helpers/: health_check.py
tests/: conftest.py  test_health.py  test_main.py
